tests/programs/invalid/InvalidVoidType.java
public class InvalidVoidType {
    public void invalidVoidType() {
        return 10;  // Invalid usage of void as a return type
    }
}
